[workspace]
resolver = "2"  # MI, some crates are on edition 2021 which defaults to `resolver = "2"`
members=[
  "macro",
  "program",
  "cli"
]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
