[package]
name = "miraplex-candy-machine-core"
version = "0.1.3"
description = "NFT Candy Machine Core: programmatic and trustless NFT drops."
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_candy_machine_core"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { package = "solarti-anchor-lang", version = "0.27.0" }
arrayref = "0.3.6"
miraplex-token-metadata = { version = "1.7.1", features = ["no-entrypoint"] }
miraland-program = "=1.14.17-rc6"
solarti-token = { version = "3.5", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
