[workspace]
[package]
name = "miraplex-candy-machine"
version = "4.5.1"
description = "NFT Candy Machine v2: programmatic and trustless NFT drops."
authors = ["Jordan Prince", "Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../LICENSE"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_candy_machine"

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { package = "solarti-anchor-lang", version = "0.26.0" }
arrayref = "0.3.6"
solarti-token = { version = "3.5.4", features = ["no-entrypoint"] }
miraplex-token-metadata = { version = "~1.7.1", features = ["no-entrypoint"] }
solarti-associated-token-account = { version = "1.1.6", features = [
  "no-entrypoint",
] }
anchor-spl = { package = "solarti-anchor-spl", version = "0.26.0" }
miraland-program = "=1.14.17-rc6"
miraland-gateway = "0.1.0"
toml_datetime = "=0.6.1"

[dev-dependencies]
miraland-program-test = "=1.14.17-rc6"
miraland-sdk = "=1.14.17-rc6"
anchor-client = { package = "solarti-anchor-client", version = "0.26.0" }
borsh = "~0.9.2"
tarpc = "0.29.0"
console = "0.15.1"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
