[workspace]
[package]
name = "miraplex-redrop"
version = "0.1.1"
description = "Miraplex easy token/NFT airdrop enabler"
authors = [
    "Miraland Crafters <crafters@miraland.top>",
    "Metaplex Developers <dev@metaplex.com>"
]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
keywords = ["miraland", "merkle", "distributor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_redrop"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { package = "solarti-anchor-lang", version = "0.27.0" }
anchor-spl = { package = "solarti-anchor-spl", version = "0.27.0" }
miraland-program = "=1.14.17-rc5"
solarti-token = { version = "3.5.4", features = ["no-entrypoint"] }
solarti-associated-token-account = { version = "1.1.6", features = [
  "no-entrypoint",
] }
miraplex-token-metadata = { version = "1.7.1", features = ["no-entrypoint"] }
toml_datetime = "=0.6.1"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
