[package]
name = "miraplex-token-metadata-test-client"
version = "0.1.0"
description = "Miraplex Library Metadata Integration Test Client"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
miraland-client = "=1.14.17-rc4"
miraland-program = "=1.14.17-rc4"
miraland-sdk = "=1.14.17-rc4"
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.0"
miraland-clap-utils = "=1.14.17-rc4"
miraland-cli-config = "1.14.17-rc4"
miraplex-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
solarti-token = { version="3.5", features = [ "no-entrypoint" ] }
solarti-associated-token-account = { version ="*", features = [ "no-entrypoint" ] }
