[package]
name = "miraplex-token-metadata-test-cli"
version = "0.2.0"
description = "Miraplex Library Metadata Integration Test Client"
authors = [
  "Miraplexer <miraplexer@outlook.com>",
  "Miraland Crafters <crafters@miraland.top>",
  "Metaplex Maintainers <maintainers@metaplex.com>"
]
repository = "https://github.com/miraland-labs/miraplex"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
miraland-client = "1.14.17"
miraland-program = "1.14.17"
miraland-sdk = "1.14.17"
bincode = "1.3.2"
borsh = "0.9.3"
clap = "2.33.0"
miraland-clap-utils = "1.14.17"
miraland-cli-config = "1.14.17"
miraplex-token-metadata = { path="../program", features = [ "no-entrypoint" ] }
solarti-token = { version="3.5", features = [ "no-entrypoint" ] }
solarti-associated-token-account = { version ="*", features = [ "no-entrypoint" ] }

[[bin]]
name = "miraplex-token-metadata-test"
path = "src/main.rs"
