[package]
name = "miraplex-token-metadata-context-derive"
version = "0.2.1"
edition = "2021"
description = "Miraplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../LICENSE"
readme = "README.md"

[lib]
proc-macro = true
name = "mpl_token_metadata_context_derive"

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.103", features = ["extra-traits", "full"] }
