[package]
name = "miraplex-token-metadata"
version = "1.7.2"
description = "Miraplex Metadata derived from Metaplex"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
miraland-program = "1.14.17-rc5"
solarti-token = { version = "3.5", features = ["no-entrypoint"] }
solarti-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
miraplex-token-auth-rules = { version = "1.3", features = ["no-entrypoint"] }
thiserror = "1.0"
borsh = "0.9.2"
shank = { version = "0.0.12" }
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
miraplex-utils = { version = "0.0.10", path="../../core/rust/utils" }
miraplex-token-metadata-context-derive = { version = "0.2.1", path = "../macro" }

[dev-dependencies]
rmp-serde = "1.1.1"
# rooster = { git = "https://github.com/miraland-labs/rooster" }
rooster = { package = "miraplex-rooster", path = "../../../rooster/program", version = "~0.1", features = ["no-entrypoint"] }
miraland-sdk = "1.14.17-rc5"
miraland-program-test = "1.14.17-rc5"
serde = { version = "1.0.147", features = ["derive"]}

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_token_metadata"
path = "src/lib.rs"
