[package]
name = "miraplex-token-metadata"
version = "1.7.5"
description = "Miraplex Metadata derived from Metaplex"
authors = [
  "Miraplexer <miraplexer@outlook.com>",
  "Metaplex Developers <dev@metaplex.com>"
]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../LICENSE"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]

arrayref = "0.3.6"
# blake3 = "=1.3.1" # MI
# borsh = "0.10.3" # vanilla: 0.9.3
# borsh0-10 = { package = "borsh", version = "0.10.3" }
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
num-derive = "0.3"
num-traits = "0.2"
miraland-program = "1.18.0"
miraplex-token-auth-rules = { version = "1.4.0", features = ["no-entrypoint"] }
miraplex-token-metadata-context-derive = { version = "0.2.1", path = "../macro" }
# miraplex-utils = { version = "0.3.0", path="../../core/rust/utils" }
miraplex-utils = "0.3.0"
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
shank = { version = "0.0.12" }
solarti-token = { version = "4.0", features = ["no-entrypoint"] }
solarti-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
rmp-serde = "1.1.1"
miraland-program-test = "1.18.0"
miraland-sdk = "1.18.0"
# # miraplex-rooster = { git = "https://github.com/miraland-labs/rooster" }
# # rooster = { package = "miraplex-rooster", path = "../../../rooster/program", version = "~0.1", features = ["no-entrypoint"] }
# miraplex-rooster = "0.1.6"
serde = { version = "1.0.147", features = ["derive"]}

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_token_metadata"
path = "src/lib.rs"
