[package]
name = "miraplex-testing-utils"
version = "0.1.1"
edition = "2021"
description = "Miraplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
name = "mpl_testing_utils"

[dependencies]
anchor-client = "0.25"
shellexpand = "2.1.0"
serde_json = "1.0"
miraland-program-test = "=1.14.17-rc5"
miraland-program = "=1.14.17-rc5"
miraland-sdk = "=1.14.17-rc5" 
solarti-token = { version = "3.5",  features = ["no-entrypoint"] }
solarti-associated-token-account = { version = "1.1",  features = ["no-entrypoint"] }
mpl-token-metadata = { version="1.4", features = [ "no-entrypoint" ] }
mpl-token-vault = { version = "0.2", features = [ "no-entrypoint" ] }
rand = "0.8.5"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
borsh = "0.9.1"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
