[package]
name = "miraplex-utils"
version = "0.0.10"
edition = "2021"
description = "MPL Core Utils library"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "mpl_utils"

[dependencies]
miraland-program = "1.14.17-rc6"
borsh = "0.9.3"
arrayref = "0.3.6"
solarti-token = { version = "3.5", features = ["no-entrypoint"], optional = true }
blake3 = "=1.3.1"  # MI
toml_datetime = "=0.6.1"  # MI

[features]
token = ["solarti-token"]
default = ["token"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
