[package]
name = "miraplex-utils"
version = "0.3.0"
edition = "2021"
description = "MPL Core Utils library"
authors = [
  "Miraplexer <miraplexer@outlook.com>",
  "Metaplex Developers <dev@metaplex.com>"
]
repository = "https://github.com/miraland-labs/miraplex-program-library"
license-file = "../../../LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "mpl_utils"

[dependencies]
miraland-program = "1.18.0"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
arrayref = "0.3.6"
solarti-token = { version = "4.0", features = ["no-entrypoint"], optional = true }

[features]
token = ["solarti-token"]
default = ["token"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
